hphp/test/zend/good/Zend/tests/inter_06.php.expectf

Fatal error: Class already declared: stdClass in %s/inter_06.php on line 3
